# mobile-manipulation

./: .gitignore  README.md
denso_robot_ros2/denso_isaacsim/maps/: denso.usd
denso_robot_ros2/denso_robot_description/config/: initial_positions.yaml
denso_robot_ros2/denso_robot_description/urdf/denso_robot/: denso_robot_macro.ros2_control.xacro  denso_robot_macro.xacro
denso_robot_ros2/denso_robot_moveit_config/config/: joint_limits.yaml
drl/: CMakeLists.txt  package.xml  setup.cfg  setup.py
drl/drl/: teste_model.py  train_model.py
drl/launch/: rounded_points.launch.py
drl/src/: rounded_points.cpp  train_model.cpp
gazebo/: CMakeLists.txt  package.xml
gazebo/config/: ros2_bridge_world_1.yaml
gazebo/launch/: world_1.launch.py
gazebo/worlds/: depth_camera.sdf  world_1.sdf
isaacsim_moveit/: CMakeLists.txt
isaacsim_moveit/launch/: denso_robot_moveit.launch.py  denso_welding_multiple_objects.launch.py  denso_welding_with_circular_conveyor_belt.launch.py  launch_isaac_sim.launch.py  panda_robot_moveit.launch.py
isaacsim_moveit/maps/: denso.usd  denso_welding.usd  denso_welding_with_circular_conveyor_belt.usd  denso_with_conveyor_belt.usd  panda_moveit.usd
isaacsim_moveit/rviz/: moveit.rviz
isaacsim_moveit/scripts/: particleEmitter.py
object_manipulation/: CMakeLists.txt  package.xml
object_manipulation/config/: Poses.yaml  labels.yaml
object_manipulation/launch/: basic_algorithm.launch.py  evaluate_reward.launch.py  multiple_objects.launch.py  rounded_points.launch.py
object_manipulation/src/: add_colision_objects.cpp  add_collision_objects.cpp  basic_algorithm.cpp  evaluate_reward.cpp  multiple_objects.cpp  object_pose.cpp  rl_trainer_node.cpp  rounded_points.cpp  welding.cpp  welding_multiple_objects.cpp  welding_with_circular_conveyor_belt.cpp
object_manipulation_interfaces/: CMakeLists.txt  package.xml
object_manipulation_interfaces/srv/: ObjectCollision.srv
panda_gz_moveit2/panda/: CMakeLists.txt
panda_gz_moveit2/panda/launch/: gz.launch.py
panda_gz_moveit2/panda/src/: ros2_bridge_to_pose_array.cpp
panda_gz_moveit2/panda_description/: CMakeLists.txt
panda_gz_moveit2/panda_description/config/: ros2_bridge_world_1.yaml
panda_gz_moveit2/panda_description/panda/: model.sdf
panda_gz_moveit2/panda_description/urdf/: panda.ros2_control  panda.urdf  panda_arm.xacro  panda_gripper.xacro
panda_gz_moveit2/panda_description/worlds/: world_1.sdf  world_2.sdf
panda_gz_moveit2/panda_moveit_config/config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
panda_gz_moveit2/panda_moveit_config/launch/: move_group.launch.py
panda_gz_moveit2/panda_moveit_config/srdf/: panda.srdf  panda_gripper.xacro
yolo_ros/yolo_bringup/launch/: yolo-world.launch.py  yolo.launch.py  yolov8.launch.py
yolo_ros/yolo_ros/: package.xml  setup.py
